samples/_failures_safe/1761321061_b9e7f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48926715.c: In function ‘main’:
./samples/SAFE/__tmp_48926715.c:124:12: error: missing terminating " character
  124 |     printf("Transformed magnitude: %.3
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_48926715.c:124:5: error: expected expression at end of input
  124 |     printf("Transformed magnitude: %.3
      |     ^~~~~~
./samples/SAFE/__tmp_48926715.c:124:5: error: expected declaration or statement at end of input
